--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <header>
-      <h1>Challenge ONE Sprint 01: Construye un encriptador de texto con Javascript de texto</h1>
+      <h1>Challenge ONE Sprint 01: Construye un encriptador de texto con Javascript</h1>
     </header>
     <main>
       <div class="input">
