--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
   </head>
   <body>
     <header>
-      <h1>Challenge ONE Sprint 01: Construye un encriptador de texto con Javascript</h1>
+      <h1>
+        Challenge ONE Sprint 01: Construye un encriptador de texto con
+        Javascript
+      </h1>
     </header>
     <main>
       <div class="input">
@@ -28,6 +31,10 @@
           <button id="limpiar">Limpiar</button>
         </div>
       </div>
+    </main>
+    <footer>
+      <p class="copyright">&copy Copyright MAlexVR 2023</p>
+    </footer>
   </body>
   <script src="encriptar.js"></script>
   <script src="desencriptar.js"></script>
