Estructura en carpetas y ajustes en footer

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <title>Encriptador y desencriptador por sustitución</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="reset.css" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="/css/reset.css" />
+    <link rel="stylesheet" href="/css/style.css" />
   </head>
   <body>
     <header>
@@ -34,10 +34,18 @@
     </main>
     <footer>
       <p class="copyright">&copy Copyright MAlexVR 2023</p>
+      <div class="redes">
+        <a href="https://www.linkedin.com/in/mauricio-avr/" target="_blank"
+          ><div class="linkedin"></div
+        ></a>
+        <a href="https://github.com/MAlexVR/" target="_blank"
+          ><div class="github"></div
+        ></a>
+      </div>
     </footer>
   </body>
-  <script src="encriptar.js"></script>
-  <script src="desencriptar.js"></script>
-  <script src="copiar.js"></script>
-  <script src="limpiar.js"></script>
+  <script src="/js/encriptar.js"></script>
+  <script src="/js/desencriptar.js"></script>
+  <script src="/js/copiar.js"></script>
+  <script src="/js/limpiar.js"></script>
 </html>
