Ajustes en rutas GitHub Pages

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <title>Encriptador y desencriptador por sustitución</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/css/reset.css" />
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="css/reset.css" />
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
     <header>
@@ -44,8 +44,8 @@
       </div>
     </footer>
   </body>
-  <script src="/js/encriptar.js"></script>
-  <script src="/js/desencriptar.js"></script>
-  <script src="/js/copiar.js"></script>
-  <script src="/js/limpiar.js"></script>
+  <script src="js/encriptar.js"></script>
+  <script src="js/desencriptar.js"></script>
+  <script src="js/copiar.js"></script>
+  <script src="js/limpiar.js"></script>
 </html>
