Se agregan instrucciones

--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
       </h1>
     </header>
     <main>
+      <div class="instructions">
+        <p class="text-instructions">
+          Ingresa un texto en minúsculas sin acentos.
+        </p>
+      </div>
       <div class="input">
         <label for="texto">Ingrese el texto a encriptar o desencriptar:</label>
         <textarea id="texto"></textarea>
