Ajustes en redacción

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </p>
       </div>
       <div class="input">
-        <label for="texto">Ingrese el texto a encriptar o desencriptar:</label>
+        <label for="texto">Ingresa el texto a encriptar o desencriptar:</label>
         <textarea id="texto"></textarea>
         <div class="botones">
           <button id="encriptar">Encriptar</button>
