Ajustes de estilo

--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
       </div>
       <div class="input">
         <label for="texto">Ingresa el texto a encriptar o desencriptar:</label>
-        <textarea id="texto"></textarea>
+        <textarea
+          id="texto"
+          placeholder="Ingresa tu mensaje aquí..."
+        ></textarea>
         <div class="botones">
           <button id="encriptar">Encriptar</button>
           <button id="desencriptar">Desencriptar</button>
@@ -30,7 +33,10 @@
       </div>
       <div class="output">
         <label for="resultado">Resultado:</label>
-        <textarea id="resultado"></textarea>
+        <textarea
+          id="resultado"
+          placeholder="Esperando tu mensaje..."
+        ></textarea>
         <div class="botones">
           <button id="copiar">Copiar</button>
           <button id="limpiar">Limpiar</button>
